# brick_by_brick

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy-bundle.yml  dev-bundle.yml  unit-tests.yml  version-bump.yml
resources/: batch_job.yml  citibike_station_status_job.yml  pipeline_job.yml  sample_job.job.yml  streaming_job.yml
src/: sample_notebook.ipynb
src/brick_by_brick/: hello.py  main.py
src/brick_by_brick/bronze/: citibike_station_information.py  citibike_station_status.py  citibike_system_information.py  citibike_system_regions.py  citibike_trips.py  openweather_nyc.py
tests/: conftest.py  sample_taxis_test.py
tests/bronze/: test_citibike_station_information.py  test_citibike_station_status.py  test_citibike_system_information.py  test_citibike_system_regions.py  test_citibike_trips.py  test_openweather_nyc.py
