[project]
name = "brick_by_brick"
version = "0.1.0"
authors = [{ name = "binaciodeoliveira@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests",
]

[dependency-groups]
unit = [
    "pytest",
]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "brick_by_brick.main:main"
citibike_station_status = "brick_by_brick.bronze.citibike_station_status:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/brick_by_brick"]
